# GATE

./: .buildinfo  .dockerignore  .gitignore  .readthedocs.yaml  Docker.bak  Dockerfile  README.md  async_dataloading.py  collect_code.py  decorator_check.py  download_tali.py  full_menu_debug.txt  gate.boilerplate.html  gate.config.html  gate.data.audio.html  gate.data.audio.speech_recognition.html  gate.data.html  gate.data.image.classification.html  gate.data.image.html  gate.data.image.segmentation.html  gate.data.image.visual_question_answering.html  gate.data.medical.html  gate.data.tasks.html  gate.data.text.html  gate.data.text.language_modelling.html  gate.data.transforms.html  gate.data.video.classification.gulp.html  gate.data.video.classification.html  gate.data.video.html  gate.evaluators.html  gate.html  gate.metrics.html  gate.models.backbones.html  gate.models.classification.html  gate.models.html  gate.models.task_adapters.html  gate.models.visual_question_answering.html  gate.trainers.html  gen.py  genindex.html  (+27 more)
.circleci/: config.yml
_modules/: index.html
_sources/: gate.config.rst.txt  gate.data.audio.rst.txt  gate.data.medical.rst.txt  gate.data.text.language_modelling.rst.txt  gate.data.transforms.rst.txt  gate.data.video.rst.txt  gate.models.backbones.rst.txt  gate.models.classification.rst.txt  index.rst.txt
design/: design_use_case.py
docs/: conf.py  gate.boilerplate.rst  gate.data.audio.speech_recognition.rst  gate.data.image.classification.rst  gate.data.image.rst  gate.data.image.segmentation.rst  gate.data.rst  gate.data.tasks.rst  (+12 more)
(+640 files in other folders)
