[tool.poetry]
name = "gate"
version = "0.8.0"
description = ""
authors = ["Antreas Antoniou <iam@antreas.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
black = "^23.3.0"
timm = "^0.6.13"
accelerate = "^0.18.0"
datasets = "^2.12.0"
transformers = "^4.28.1"
orjson = "^3.8.11"
gh = "^0.0.4"
tabulate = "^0.9.0"
nvitop = "^1.1.2"
hydra-zen = "^0.10.0"
neptune = "^1.1.1"
pytorchvideo = "^0.1.5"
torchtyping = "^0.1.4"
h5py = "^3.8.0"
wandb = "^0.15.0"
torch = {version="*", source="torch"}
torchvision = {version="*", source="torch"}
torchaudio = {version="*", source="torch"}


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
